update: id string

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 							item = data[i];
 
-							$("#tableView").after(createTableViewCellWithItemWith(item['id_task'][''], item['title']['S']));
+							$("#tableView").after(createTableViewCellWithItemWith(item['id_task']['S'], item['title']['S']));
 						}
 					},
 					error: function() {
