--- a/todolist.html
+++ b/todolist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<title>Todo List - Home</title>
+	<title>Todo List</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -10,37 +10,27 @@
 	<div class="borderTop">&nbsp;</div>
 
 	<main>
-		<div class="mainHome">
+		<div class="mainContent">
 
 			<h1>Todo List</h1>
 
-			<p>
-				<span>Modelo #01 - <a href="todolist.html">Entrar</a></span>
-			</p>
-			<br/>
-			<p>
-				- AWS S3 -> Frontend (html+js)
-				<br/>
-				- AWS Elastic Besntalk -> Backend (PHP + DynamoDB)
-				<br/>
-				- AWS DynamoDB
-				<br/>
-				- AWS Code Pipeline
-				<br/>
-				&nbsp;&nbsp;&nbsp; Esteira Frontend (GitHub)
-				<br/>
-				&nbsp;&nbsp;&nbsp; Esteira Backend (GitHub)
-			</p>
-			<br />
-			<p>
-				<span>Modelo #02 - <a href="http://ec2-18-229-156-229.sa-east-1.compute.amazonaws.com/index.html">Entrar</a></span>
-			</p>
-			<br/>
-			<p>
-				- AWS VPC + Subnets
-				<br/>
-				- AWS EC2 (Apache + PHP + MySQL)
-			</p>
+			<div id="tableViewLoading">
+				<div class="loader"></div>
+			</div>
+			<div id="tableView"></div>
+
+			<div id="tableViewCell" class="tableViewCell">
+				<input class="input" type="text" id="inputWithNewItem" name="inputWithNewItem" placeholder="Novo item...">
+				<div id="plusButton"></div>
+				<div class="divisor"></div>
+			</div>
+		</div>
+
+		<div id="alert" class="alert">
+			<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+			<span class='text'></span>
+	  </div>
+	  <div id="alertAnchor"></div>
 	</main>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
