update: id string

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 			<h1>Todo List</h1>
 
 			<p>
-				<span>Modelo #01 - <a href="todolist.html">Entrar</a></span>
+				<span>Modelo #01 </span>
+				<br />
 			</p>
 			<br/>
 			<p>
@@ -31,9 +32,14 @@
 				<br/>
 				&nbsp;&nbsp;&nbsp; Esteira Backend (GitHub)
 			</p>
+			<br/>
+			<a href="todolist.html">
+				<div>Entrar</div>
+			</a>
 			<br />
 			<p>
-				<span>Modelo #02 - <a href="http://ec2-18-229-156-229.sa-east-1.compute.amazonaws.com/index.html">Entrar</a></span>
+				<span>Modelo #02</span>
+				<br />
 			</p>
 			<br/>
 			<p>
@@ -41,6 +47,10 @@
 				<br/>
 				- AWS EC2 (Apache + PHP + MySQL)
 			</p>
+			<br/>
+			<a href="http://ec2-18-229-156-229.sa-east-1.compute.amazonaws.com/index.html">
+				<div>Entrar</div>
+			</a>
 	</main>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
