--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
 			<a href="http://ec2-18-229-156-229.sa-east-1.compute.amazonaws.com/index.html">
 				<div>Entrar</div>
 			</a>
+			<br />
+			<p>
+				<span>PDF</span>
+				<br />
+			</p>
+			<br/>
+			<a href="pdf/aws-prints-mba.pdf">
+				<div>Abrir PDF (prints)</div>
+			</a>
 	</main>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
